// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseButton executes callback 1`] = `
<button
  className="sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`BaseButton executes callback 2`] = `
<button
  className="sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 1`] = `
<button
  className="sc-EHOje FXgKN sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 2`] = `
<button
  className="sc-EHOje FXgKN sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the BaseButton matches the snapshot 1`] = `
<button
  className="sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the IconButton matches the snapshot 1`] = `
<button
  className="sc-EHOje FXgKN sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-bZQynM hQwFUP"
    focusable="false"
    role="img"
  />
</button>
`;

exports[`the IconButton with text matches the snapshot 1`] = `
<button
  className="sc-EHOje FXgKN sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-gzVnrw kYMwGB sc-htoDjs jtQveW"
    focusable="false"
    role="img"
  />
  Click
</button>
`;

exports[`the SnippetPreviewButton matches the snapshot 1`] = `
<button
  className="sc-EHOje FXgKN sc-ifAKCX emueJE sc-bxivhb kceQSo sc-htpNat eydFZn sc-bwzfXH eFAXpn sc-bdVaJa dHgGrL"
  type="button"
>
  ButtonValue
</button>
`;
